--- a/_posts/2015-05-07-grup.md
+++ b/_posts/2015-05-07-grup.md
@@ -137,7 +137,7 @@ gulp.task('clean', function(cb) {
 
 ####有关于我的配置
 可参考项目:[helloGlup]
-[helloGlup]: [https://github.com/dandananddada/helloGulp.git]
+[helloGlup]: https://github.com/dandananddada/helloGulp.git
 给出配置文件如下：
 
 ```javascript
