--- a/_posts/2015-05-07-gulp.md
+++ b/_posts/2015-05-07-gulp.md
@@ -2,29 +2,29 @@
 layout: post
 categories: frontend
 date:   2015-05-07
-title:  Glup
-summary: glup is a stram-based build system, designed for big project, small, idiomatic node modules.
+title:  gulp
+summary: gulp is a stram-based build system, designed for big project, small, idiomatic node modules.
 ---
 
-和Grunt类似，Gulp也是一个前端自动化构建工具。
-####与Grunt的比较
+和grunt类似，gulp也是一个前端自动化构建工具。
+####与grunt的比较
 
-Glup和Grunt最显著的区别就是Glup采用编码大于配置，而Grunt相反配置大于编码。
+gulp和grunt最显著的区别就是gulp采用编码大于配置，而grunt相反配置大于编码。
 
-Glup是基于流的构建系统，相对更侧重各任务之间的衔接，而Grunt侧重于一些通用的任务。
+gulp是基于流的构建系统，相对更侧重各任务之间的衔接，而grunt侧重于一些通用的任务。
 
-另外Glup更易读，但是Grunt相对插件要多。
+另外gulp更易读，但是grunt相对插件要多。
 
 ####安装与配置
-安装全局gulp
+安装全局gulp。
 
 `$ npm install --global gulp`
 
-创建项目，在项目目录下安装gulp
+创建项目，在项目目录下安装gulp。
 
 `$ npm install --save-dev gulp`
 
-创建gulpfile.js文件，配置gulp
+创建gulpfile.js文件，配置gulp。
 
 ```javascript
 var gulp = require('gulp');
@@ -33,7 +33,7 @@ gulp.task('default', function() {
   // place code for your default task here
 });
 ```
-运行gulp
+运行gulp。
 
 `$ gulp`
 
@@ -44,11 +44,11 @@ gulp.task('default', function() {
 
 **首先说明Build Css文件用到的一些插件：**
 
-**gulp-ruby-sass**：用来将scss文件编译为css文件
+**gulp-ruby-sass**：用来将scss文件编译为css文件。
 
-**gulp-autoprefixer**：用来给css样式自动添加浏览器前缀
+**gulp-autoprefixer**：用来给css样式自动添加浏览器前缀。
 
-**gulp-minify-css**：用于css文件的压缩
+**gulp-minify-css**：用于css文件的压缩。
 
 流程如下：首先将css目录下scss文件编译为css文件，对css文件添加浏览器前缀，重命名为*.min.css，然后压缩输出到`dist/css`目录。
 
@@ -66,9 +66,9 @@ gulp.task('css', function() {
 ```
 **然后说明Build Js文件用到的插件**
 
-**gulp-concat**：用来合并文件，这里主要合并js文件
+**gulp-concat**：用来合并文件，这里主要合并js文件。
 
-**gulp-uglify**：混淆压缩js
+**gulp-uglify**：混淆压缩js。
 
 流程如下：首先合并app目录下js文件（我这里想保留js目录结构所以注释掉了合并任务），修改前缀为*.min.js，执行混淆压缩命令 输出到`dist/js`目录。
 
@@ -87,9 +87,9 @@ gulp.task('js', function() {
 
 **接下来说下非常有用的监视任务**
 
-**gulp-webserver**：用于在本地启动Http服务
+**gulp-webserver**：用于在本地启动Http服务。
 
-**gulp-livereload**：livereload用于浏览器自动刷新
+**gulp-livereload**：livereload用于浏览器自动刷新。
 
 首先创建一个watch任务，监测所有资源文件是否发生修改，然后创建一个webserver任务，启动watch任务，webserver任务启动时会自动打开浏览器加载当前app目录下html文件，当watch任务监测到文件修改时就会通知livereload，浏览器就会实时刷新，省去了手动刷新的操作。
 
@@ -125,7 +125,7 @@ gulp.task('server', function() {
 
 **最后说下clean任务**
 
-当你执行build任务，或者想删除build后的文件时，可以用del删除指定目录文件
+当你执行build任务，或者想删除build后的文件时，可以用del删除指定目录文件。
 
 ```javascript
 var del = require('del');
@@ -136,8 +136,8 @@ gulp.task('clean', function(cb) {
 ```
 
 ####有关于我的配置
-可参考项目:[helloGlup]
-[helloGlup]: https://github.com/dandananddada/helloGulp.git
+可参考项目:[hellogulp]
+[hellogulp]: https://github.com/dandananddada/hellogulp.git
 给出配置文件如下：
 
 ```javascript
