--- a/_posts/2015-05-07-gulp.md
+++ b/_posts/2015-05-07-gulp.md
@@ -2,12 +2,12 @@
 layout: post
 categories: frontend
 date:   2015-05-07
-title:  gulp
-summary: gulp is a stram-based build system, designed for big project, small, idiomatic node modules.
+title:  Gulp
+summary: Gulp is a stram-based build system, designed for big project, small, idiomatic node modules.
 ---
 
 和grunt类似，gulp也是一个前端自动化构建工具。
-####与grunt的比较
+####与Grunt的比较
 
 gulp和grunt最显著的区别就是gulp采用编码大于配置，而grunt相反配置大于编码。
 
